--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /LinearRegression/data
-/ultipleLInearRegression/data
+/LogisticRegression/data
+/MultipleLInearRegression/data
+/RegressionRegularizationMethods/data
+RegularisationLineaire.docx
