--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 /LinearRegression/data
 /LogisticRegression/data
 /MultipleLInearRegression/data
+/RandomForstForFraudDetection/data
 /RegressionRegularizationMethods/data
+
 RegularisationLineaire.docx
